When EPW input is provided, the 3-hour average dew point is
used to compute a more accurate precipitable water content
value.  It currently does not use these data directly from
the EPW input, relying instead on a dew-point-to-W calculation.
This follows the request and recommendations of David G-M.

Removed limitation in rfluxmtx, which was disallowing distant
and local receivers. Found this to be a perfectly valid approach
for some annual daylighting scenarios.

Wrote new pvsum tool to handle cases dctimestep can't, like
spectral input pictures.  It also adds a -N option for multi-
processing on Unix machines, which utilizes memory-mapped
inputs for efficient i/o sharing.

Made it so genBSDF can use spectral rendering for a
more accurate photometric result.

Changed default matrix representation to float rather than
double, which uses less RAM and supports faster operations
in general.  Build with compiler flag:
	-DDTnativeDTrmx_native=DTdouble
to get back higher precision representation.

Taoning Wang updated genssky and gensdaymtx to provide illuminance
calibration and accept EPW files directly as input.

Added -e expr and -f file.cal options to all rendering tools, not
just rcontrib/rxcontrib.  Feature request from Peter A-B.

Fixed slight bias in indirect calculation caused by ambient
collision detection, pointed out by Jon Sargent.  New code
keeps track of rejected samples and sells them back to
later calls to get something closer to a true Poisson
sampling method.

Altered rvu "origin" command to take shift amounts forward,
right, and up rather than taking an explicit origin, which
can be done easily enough with the "view" command.  Peter A-B
requested (sort of).

Added genglaze tool created by Taoning Wang to generate
spectral glazing materials based on CGDB data and models.

Fixed bug that caused inf and nan errors with -cw setting
where longer wavelength was substantially less than limits
of specified spectra.