@@ -1,4 +1,4 @@
-# RCSid $Id: Rmakefile,v 2.59 2024/02/26 23:43:35 greg Exp $
+# RCSid $Id: Rmakefile,v 2.60 2025/05/21 17:23:07 greg Exp $
 #
 # Makefile for conversion programs
 #
@@ -21,7 +21,8 @@ INSTDIR = /usr/local/bin
 LIBDIR = /usr/local/lib/ray
 
 PROGS = ies2rad nff2rad lampcolor tmesh2rad obj2rad robjutil \
-mgf2rad rad2mgf mgf2meta mgfilt mgf2inv 3ds2mgf bsdfquery checkBSDF \
+mgf2rad rad2mgf mgf2meta mgfilt mgf2inv 3ds2mgf \
+bsdfquery bsdfpeaks checkBSDF \
 pabopto2xyz pabopto2bsdf bsdf2ttree bsdf2klems pkgBSDF epw2wea bsdf2rad
 
 LIBFILES = source.cal tilt.cal lamp.tab window.cal bsdf2rad.cal
@@ -103,6 +104,10 @@ bsdfquery:	bsdfquery.o bsdfrep.o bsdfinterp.o
 	$(CC) $(CFLAGS) -o bsdfquery bsdfquery.o bsdfrep.o bsdfinterp.o \
 -lrtrad $(MLIB)
 
+bsdfpeaks:	bsdfpeaks.o bsdfrep.o bsdfinterp.o
+	$(CC) $(CFLAGS) -o bsdfpeaks bsdfpeaks.o bsdfrep.o bsdfinterp.o \
+-lrtrad $(MLIB)
+
 bsdf2ttree:	bsdf2ttree.o bsdfrep.o bsdfinterp.o
 	$(CC) $(CFLAGS) -o bsdf2ttree bsdf2ttree.o bsdfrep.o bsdfinterp.o \
 -lrtrad $(MLIB)
@@ -174,6 +179,8 @@ bsdf2klems.o bsdf2ttree.o mgf2meta.o:	../common/random.h ../common/calcomp.h
 bsdftrans.o:	transportSimplex.h
 
 bsdfquery.o:	../common/rtmath.h ../common/rtio.h bsdfrep.h
+
+bsdfpeaks.o:	bsdfrep.h
 
 checkBSDF.o:	../common/rtio.h ../common/bsdf_m.h ../common/bsdf_t.h
 
